--- a/index.html
+++ b/index.html
@@ -1,13 +1,18 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + Svelte + TS</title>
+    <title>waveOS</title>
+
+    <link rel="stylesheet" id="stateCSSLoader" />
   </head>
   <body>
-    <div id="app"></div>
+    <main id="main">
+      <div id="stateLoader" class="fullscreen hidden"></div>
+      <div id="appRenderer"></div>
+    </main>
     <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
