Okay it's called ArcOS now

--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>waveOS</title>
+    <title>ArcOS</title>
 
     <link rel="stylesheet" id="stateCSSLoader" />
   </head>
   <body>
     <main id="main">
-      <div id="stateLoader" class="fullscreen hidden"></div>
+      <div id="stateLoader" class="fullscreen"></div>
       <div id="appRenderer"></div>
     </main>
     <script type="module" src="/src/main.ts"></script>
