--- a/index.html
+++ b/index.html
@@ -7,6 +7,15 @@
     <title>ArcOS</title>
 
     <link rel="stylesheet" id="stateCSSLoader" />
+    <style>
+      html,
+      body {
+        width: 100%;
+        height: 100%;
+        margin: 0;
+        background-color: #000;
+      }
+    </style>
   </head>
   <body>
     <main id="main">
