Rotur stuff, weather stuff, stuffff

--- a/src/state/serverdown/serverdown.html
+++ b/src/state/serverdown/serverdown.html
@@ -1,4 +1,4 @@
 <div class="server-down">
   <span class="lucide icon-ban"></span>
-  <p>Server offline. Please try again later.</p>
+  <p id="status">Server offline. Please try again later.</p>
 </div>
