some crash stuff and stuff

--- a/src/state/crash/crash.html
+++ b/src/state/crash/crash.html
@@ -5,6 +5,6 @@
   <p>This session can't continue. A report has been sent to the developers, refresh the browser to restart.</p>
   <div class="shortcut-hint">
     <span class="lucide icon-scroll-text"></span>
-    <span>Alt+F2</span>
+    <span>Space</span>
   </div>
 </div>
