--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <link rel="icon" type="image/svg+xml" href="/logo-dm.svg" media="(prefers-color-scheme: dark)" />
     <link rel="icon" type="image/svg+xml" href="/logo-lm.svg" media="(prefers-color-scheme: light)" />
     <link rel="manifest" href="/manifest.webmanifest" />
+    <link rel="stylesheet" href="/preboot.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="robots" content="noindex, nofollow" />
     <title>ArcOS</title>
@@ -26,5 +27,6 @@
       <div id="appRenderer"></div>
     </main>
     <script type="module" src="/src/main.ts"></script>
+    <script src="/preboot.js"></script>
   </body>
 </html>
