Change the initial dots to indicate the loading phase

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   </head>
   <body>
     <main id="main">
-      <div id="stateLoader" class="fullscreen">...</div>
+      <div id="stateLoader" class="fullscreen">.</div>
       <div id="appRenderer"></div>
     </main>
     <script type="module" src="/src/main.ts"></script>
