Add brief error to crash screen

--- a/src/state/crash/crash.html
+++ b/src/state/crash/crash.html
@@ -3,8 +3,12 @@
   <span class="lucide icon-bomb"></span>
   <h1>ArcOS crashed!</h1>
   <p>This session can't continue. A report has been sent to the developers, refresh the browser to restart.</p>
+  <p id="crashTextBrief"></p>
   <div class="shortcut-hint">
     <span class="lucide icon-scroll-text"></span>
-    <span>Space</span>
+    <span class="key">Space</span>
+    <div class="sep"></div>
+    <span class="lucide icon-rotate-cw"></span>
+    <span class="key">R</span>
   </div>
 </div>
