--- a/src/state/serverdown/serverdown.html
+++ b/src/state/serverdown/serverdown.html
@@ -1,4 +1,8 @@
 <div class="server-down">
   <span class="lucide icon-ban"></span>
   <p id="status">Server offline. Please try again later.</p>
+  <div class="shortcut-hint">
+    <span class="lucide icon-arrow-left-right"></span>
+    <span class="key">F4</span>
+  </div>
 </div>
