--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
     </style>
   </head>
   <body>
+    <div id="kernelLog"></div>
     <main id="main">
       <div id="stateLoader" class="fullscreen">.</div>
       <div id="appRenderer"></div>
